--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -73,17 +73,42 @@ landing.php
 
 #callToAction {
   background: #900;
+  @include background( linear-gradient(#900, #600) );
   border: 1px solid #400;
-  padding: 10px 20px 10px 40px;
+  color: #fff;
+  padding: 15px 20px;
   position: absolute;
-  right: -5px;
+  overflow: visible !important;
+  right: -10px;
   top: 30px;
-  width: 280px;
+  width: 400px;
   z-index: 200;
+  @include border-top-right-radius(3px);
+  @include border-left-radius(5px);
+  @include box-shadow(
+    0px 2px 5px 2px rgba(0,0,0,.5),
+    inset 1px 1px 0 rgba(255,255,255,.25)
+  );
+
+  &:after {
+    border-top: 5px solid #500;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid #500;
+    bottom: -11px;
+    content: '';
+    display: block;
+    height: 0;
+    position: absolute;
+    right: -1px;
+    width: 0;
+    z-index: 250;
+  }
 }
 
 #callToAction h2 {
   font-size: 16px;
+	// font-family: 'helvetica neue', 'segoe ui', arial, sans-serif;
 }
 
 /* Gallery Slides */
