--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,6 +2,8 @@
 TYPOGRAPHY & COMMON CLASSES
 *******************************************************************************/
 
+$georgia: georgia, 'times new roman', times, serif;
+
 body {
 	background: #331c0d url(img/stripes.png) repeat-x top left;
 	color: #dc9;
@@ -13,7 +15,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-	font-family: georgia, 'times new roman', times, serif;
+	font-family: $georgia;
 	font-weight: normal;
 	line-height: 1.25;
 	margin-bottom: 0;
@@ -101,9 +103,9 @@ GLOBAL
 #topBar {
 	border-top: 1px solid #331c0d;
 	border-bottom: 1px solid #331c0d;
-	height: 60px;
 	margin: 30px 0 20px;
 	position: relative;
+  z-index: 50;
 }
 
 #header {
