this week redirect and anchor underline rm'd

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
-/*
+/*!
 Theme Name: Venture Cafe
 Theme URI: http://venturecafe.net/
-Description: The official Venture Cafe WordPress Theme
+Description: The official Venture Cafe WordPress Theme.
 Author: Yifei Zhang
-Author URI: http://yifeizhang.com/
+Author URI: http://yifei.co/
 Template: twentyten
 Version: 1.1
 */
